<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.seba_.mebav5.Ver_punto_de_interes">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tituloPItxt"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.711" />

        <ImageView
            android:id="@+id/fotoPIjpj"
            android:layout_width="229dp"
            android:layout_height="237dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:contentDescription=""
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloPItxt"
            app:srcCompat="@drawable/paisaje" />

        <RatingBar
            android:id="@+id/ratingid"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/ratingtxt"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Popularidad: "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descripcionPItxt"
            android:layout_width="339dp"
            android:layout_height="215dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/descripcion"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.668"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fotoPIjpj" />

        <Button
            android:id="@+id/cargarAnec"
            style="@style/Animation.AppCompat.Dialog"
            android:layout_width="184dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            android:text="@string/agregar_an_cdota"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoTituloListaAnec" />

        <TextView
            android:id="@+id/textoTituloListaAnec"
            android:layout_width="345dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="15dp"
            android:layout_weight="0.17"
            android:paddingTop="10dp"
            android:text="@string/mirar_anec"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcionPItxt" />

        <ListView
            android:id="@+id/lisrviewAnes"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="387dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="72dp"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            app:layout_constraintTop_toBottomOf="@+id/textoTituloListaAnec" />



    </LinearLayout>

</ScrollView>
